<resources>
    <string name="app_name">PhoneBook\\</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="delete_button_text">delete</string>
    <string name="dialog_add_record">Add record</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_contact">Name contact</string>
    <string name="number_contact">Number contact</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="btn_add_record_dialog">Add record</string>
    <string name="menu_delete_item_record">Delete</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
</resources>
