<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/target_frame_contact_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            style="?android:attr/alertDialogIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_white_24dp"
            android:id="@+id/btn_add_record"
            android:layout_gravity="right|bottom"
            android:contentDescription="@string/btn_add_record_dialog" />
    </FrameLayout>


</LinearLayout>
